@@ -1,6 +1,8 @@
 int FCEU_InitVirtualVideo(void);
 void FCEU_KillVirtualVideo(void);
 int SaveSnapshot(void);
+uint32 GetScreenPixel(int x, int y);
+int GetScreenPixelPalette(int x, int y);
 extern uint8 *XBuf;
 extern uint8 *XBackBuf;
 extern int ClipSidesOffset;
